# DualSPHysics

./: .gitignore  .travis.yml  CHANGES.txt  CONTRIBUTING.md  Dockerfile  DualSPHysics4Re_vs2013.vcxproj  DualSPHysics4Re_vs2013.vcxproj.filters  README.md  _ClearTempFiles.bat  chpermissions.sh
EXECS_LINUX/: BoundaryVTK4_linux64  ComputeForces4_linux64  DsphConfig.xml  DualSPHysicsCPU_linux64  FloatingInfo4_linux64  GenCase4_MkWord_linux64  GenCase4_linux64  IsoSurface4_linux64  MeasureBoxes4_linux64  MeasureTool4_linux64  PartVTK4_linux64  PartVTKOut4_linux64
HELP/: BoundaryVTK4_Help.out  CaseTemplate.xml  ComputeForces4_Help.out  DualSPHysics4_Help.out  FilePointsTemplate.txt  FloatingInfo4_Help.out  GenCase4_Help.out  IsoSurface4_Help.out  MeasureBoxes4_Help.out  MeasureTool4_Help.out  PartVTK4_Help.out  PartVTKOut4_Help.out  _FmtXML_Initialize.xml  _FmtXML_WavePaddles.xml  _FmtXML_WavePaddlesAwas.xml  _FmtXML__Parameters.xml
RUN_DIRECTORY/EXAMPLE_LINUX/: CaseDambreakVal2D_linux64_CPU.sh  CaseDambreakVal2D_linux64_GPU.sh
RUN_DIRECTORY/EXAMPLE_WIN/: CaseDambreakVal2D_Def.xml  CaseDambreakVal2D_win64_CPU.bat  CaseDambreakVal2D_win64_GPU.bat
SOURCE/DualSPHysics/: DualSPHysics4Re_vs2013.vcxproj  DualSPHysics4Re_vs2013.vcxproj.filters
Source/: Functions.h  FunctionsCuda.h  FunctionsMath.h  JArraysCpu.h  JArraysGpu.h  JBlockSizeAuto.cpp  JCellDivCpu.cpp  JCellDivCpuSingle.cpp  JCellDivGpu.cpp  JCellDivGpu.h  JCellDivGpuSingle.cpp  JCellDivGpu_ker.cu  JCfgRun.h  JDamping.h  JFormatFiles2.h  JLog2.cpp  JLog2.h  JObject.cpp  JObjectGpu.h  JPartDataBi4.cpp  JPartsOut.cpp  JReadDatafile.cpp  JSaveCsv.h  JSaveDt.cpp  JSpaceParts.h  JSph.cpp  JSph.h  JSphGpuSingle.cpp  JSphGpu_ker.cu  JSphGpu_ker.h  JWaveGen.h  JXml.cpp  JXml.h  Makefile  Makefile_cpu  _FmtXML_AccInput.xml
doc/help/: BIFileInfo_Help.out  BoundaryVTK4_Help.out  BoundaryVTK_Help.out  ComputeForces4_Help.out  ComputeForces_Help.out  DualSPHysics3.4_LiquidSediment_Help.out  DualSPHysics4.0_LiquidGas_Help.out  DualSPHysics4.2_Help.out  DualSPHysics4.3_Help.out  DualSPHysics4.4_Help.out  DualSPHysics4_Help.out  DualSPHysics5.0_Help.out  DualSPHysics5.0_NNewtonian_Help.out  DualSPHysics5.2_FlexStruc_Help.out  DualSPHysics5.2_Help.out  DualSPHysics5.4_Help.out  FileBoxesTemplate.txt  FilePointsTemplate.txt  FloatingInfo4_Help.out  FloatingInfo_Help.out  FlowTool4_Help.out  FlowTool_BoxesTemplate.xml  FlowTool_Help.out  GenCase4_Help.out  GenCase_Help.out  IsoSurface4_Help.out  IsoSurface_Help.out  MeasureBoxes4_Help.out  MeasureTool4_Help.out  MeasureTool_Help.out  MeasureTool_PointsPosTemplate.csv  PartVTK4_Help.out  PartVTKOut4_Help.out  PartVTKOut_Help.out  PartVTK_Help.out  README.txt  ReadSwash2_Help.out  ReadSwash_Help.out  TracerParts_Help.out  VERSION_INFO.txt  (+1 more)
doc/xml_format/: CaseTemplate.xml  GenCase_Bathymetry.csv  GenCase_CaseTemplate.xml  _FmtXML_AccInput.xml  _FmtXML_BoundCorr.xml  _FmtXML_BoundExtrap.xml  _FmtXML_Chrono.xml  _FmtXML_Damping.xml  _FmtXML_Gauges.xml  _FmtXML_InOut.xml  _FmtXML_InOutMesh.xml  _FmtXML_Initialize.xml  _FmtXML_InitializeNormals.xml  _FmtXML_MLPistons.xml  _FmtXML_MoorDyn.xml  _FmtXML_MoorDynPlus.xml  _FmtXML_Moorings.xml  _FmtXML_MphaseNNewtonian.xml  _FmtXML_OutputParts.xml  _FmtXML_RelaxationZones.xml  _FmtXML_SaveDt.xml  _FmtXML_Shifting.xml  _FmtXML_TimeOut.xml  _FmtXML_WavePaddles.xml  _FmtXML_WavePaddlesAwas.xml  _FmtXML_WavePaddlesSolitary.xml  _FmtXML__FlexibleStructure.xml  _FmtXML__Parameters.xml  (+2 more)
examples/: README.txt
src/: Functions.cpp  Functions.h  FunctionsCuda.cpp  JBinaryData.cpp  JBlockSizeAuto.h  JCellDivGpu.cpp  JCellDivGpu.h  JCellDivGpuSingle_ker.h  JCfgRun.cpp  JDsphConfig.h  JFormatFiles2.h  JGaugeItem.cpp  JGaugeItem.h  JGaugeSystem.cpp  JGauge_ker.cu  JLog2.cpp  JLog2.h  JMatrix4.h  JMotionMov.h  JMotionPos.cpp  JPartFloatBi4.cpp  JPartFloatBi4.h  JPartOutBi4Save.cpp  JPartsLoad4.h  JRangeFilter.h  JReduSum_ker.cu  JSaveCsv.cpp  JSaveCsv2.cpp  JSaveCsv2.h  JSaveDt.cpp  JSaveDt.h  JSpaceEParms.cpp  JSpaceParts.cpp  JSph.cpp  JSph.h  JSphAccInput.cpp  JSphCpu.cpp  JSphCpuSingle.cpp  JSphGpu.cpp  JSphGpu.h  (+18 more)
src/source/: .project  CMakeLists.txt  DSPHChronoLib.h  DSphMoorDyn.h  DSphMoorDynPlus.h  DSphMoorDynPlusUndef.h  DSphMoorDynUndef.h  DualSphDef.h  FunGeo3d.cpp  FunGeo3d.h  FunSphEos.h  FunSphEos_iker.h  FunSphKernel.h  FunSphKernelDef.h  FunSphKernel_iker.h  FunSphKernelsCfg.cpp  FunSphKernelsCfg.h  Functions.cpp  Functions.h  FunctionsBasic_iker.cu  FunctionsBasic_iker.h  FunctionsBasic_ker.cu  FunctionsCuda.cpp  FunctionsCuda.h  FunctionsGeo3d.cpp  FunctionsGeo3d.h  FunctionsGeo3d_iker.cu  FunctionsGeo3d_iker.h  FunctionsGeo3d_ker.cu  FunctionsMath.cpp  FunctionsMath.h  FunctionsMath_iker.h  FunctionsMath_ker.cu  JAppInfo.cpp  JAppInfo.h  JAppInfoDef.h  JArraysCpu.cpp  JArraysCpu.h  JArraysGpu.cpp  JArraysGpu.h  (+382 more)
src/source/Source_DSphMoorDynPlus/: CMakeLists.txt  ChangeLog.txt  DSphMoorDynPlus.cpp  FunMoorDynPlus.cpp  FunMoorDynPlus.h  IApi.h  IBody.cpp  IBody.h  IConnection.cpp  IConnection.h  IEnvironment.cpp  IEnvironment.h  ILine.cpp  ILine.h  IOutput.cpp  IOutput.h  IQSlines.cpp  IQSlines.h  Makefile_MoorDynPlus  Misc.cpp  Misc.h  MoorDynPlus.cpp  MoorDynPlus.h  TypesMoorDynPlus.h  _FmtXML_MoorDynPlus.xml  _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h  kiss_fft_LICENSE.txt  kissfft.hh  readme.txt
src_mphase/DSPH_v5.0_NNewtonian/source/: CMakeLists.txt  DSPHChronoLib.h  DSphMoorDyn.h  DSphMoorDynUndef.h  DualSphDef.h  FunGeo3d.h  FunSphEos_iker.h  FunSphKernel_iker.h  FunSphKernelsCfg.cpp  Functions.cpp  FunctionsBasic_iker.h  FunctionsCuda.cpp  FunctionsCuda.h  JAppInfoDef.h  JArraysCpu.cpp  JArraysCpu.h  JArraysGpu.cpp  JArraysGpu.h  JBinaryData.h  JCaseCtes.cpp  JCaseEParms.cpp  JCaseParts.h  JCaseProperties.cpp  JCaseProperties.h  JCaseUserVars.h  JCaseVtkOut.cpp  JCellDivCpu.cpp  JCellDivCpuSingle.cpp  JCellDivCpuSingle.h  JCellDivGpu.cpp  JCellDivGpu.h  JCellDivGpuSingle.cpp  JCellDivGpuSingle_ker.cu  JCellDivGpuSingle_ker.h  JCellDivGpu_ker.cu  JCellDivGpu_ker.h  JCellSearch_iker.h  JCellSearch_inline.h  JCfgRunBase.h  JChronoData.h  (+138 more)
(+242 files in other folders)
